# openfoodfacts-rust

./: Cargo.toml  README.md
.github/workflows/: linter.yml
src/: client.rs  lib.rs  search.rs
tests/: client.rs
