[package]
authors = ["jjdo"]
edition = "2018"
name = "openfoodfacts"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
], default-features = false }
url = "2.2"
